# rfc-http-validate

./: .gitignore  LICENSE.md  Makefile  Makefile.pyproject  README.md  pyproject.toml  requirements.txt  rfc-http-validate.py  setup.cfg  setup.py  sf-rfc-validate.py
.github/workflows/: publish.yml
rfc_http_validate/: __init__.py  markdown.py  methods.py  typemap.py  ui.py  validate.py  xml.py
test/: conftest.py  test_extractors.py  test_validate.py
