[project]
name = "rfc-http-validate"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "http-sf>=1.0.1",
    "blessings",
    "commonmark"
]

[project.optional-dependencies]
dev = ["mypy", "black", "pylint", "pytest", "pytest-md", "validate-pyproject", "build", "types-commonmark"]

[project.urls]
homepage = "https://github.com/mnot/rfc-http-validate/"

[project.scripts]
rfc-http-validate = "rfc_http_validate:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "rfc_http_validate.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["rfc_http_validate", "rfc_http_validate.*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rfc_http_validate = ["py.typed"]

