[metadata]
name = rfc-http-validate
version = attr: rfc_http_validate.__version__
author = Mark Nottingham
author_email = mnot@mnot.net
description = Validate HTTP messages in XML2RFC documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnot/rfc-http-validate
project_urls =
    Bug Tracker = https://github.com/mnot/rfc-http-validate/issues
classifiers =
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License

[options]

packages = find:
python_requires = >=3.7
install_requires =
    http_sfv
    blessings

[options.extras_require]
dev = mypy; black

[options.entry_points]
console_scripts =
    rfc-http-validate = rfc_http_validate:main
